--- a/theme/boost/style/moodle.css
+++ b/theme/boost/style/moodle.css
@@ -11901,6 +11901,16 @@ body.h5p-embed .h5pmessages {
 #h5pcontenttypes td {
   vertical-align: middle; }
 
+#page.drawers form#h5peditor,
+#page.drawers form#coolh5peditor,
+#page.drawers .core_contentbank_viewcontent {
+  max-width: 960px;
+  margin: 0 auto; }
+
+body.path-mod-h5pactivity.limitedwidth #page.drawers .main-inner {
+  max-width: 960px;
+  margin: 0 auto; }
+
 .text-decoration-none {
   text-decoration: none !important;
   /* stylelint-disable-line declaration-no-important */ }
@@ -13697,6 +13707,7 @@ table.calendartable caption {
   max-height: 190px;
   overflow-y: auto; }
 
+.cb-navigation-container .singleselect,
 .cb-navigation-container .singleselect .custom-select {
   width: 100%; }
 
